@@ -153,6 +153,7 @@ ActionCodeRec  DefaultActionCodeTable[]=
    {DELETE_BLOCK,"${kf4}d"},
    {DELETE_BLOCK,"$1kf12"},
    {DELETE_BLOCK,"\033|$kf12"},
+   {DELETE_BLOCK,"\033[3;2~"},
    {SET_BLOCK_END,"$kf6"},
    {SET_BLOCK_END,"\033|6"},
    {SET_BLOCK_END,"${kf4}E"},
@@ -194,6 +195,8 @@ ActionCodeRec  DefaultActionCodeTable[]=
    {YANK_BLOCK,"\033|$kf11"},
    {YANK_BLOCK,"${kf4}Y"},
    {YANK_BLOCK,"${kf4}y"},
+   {YANK_BLOCK,"\033[2;2~"},
+   {REMEMBER_BLOCK,"$kIC"},
    {START_DRAG_MARK,"${kf4}V"},
    {START_DRAG_MARK,"${kf4}v"},
    {MARK_ALL,"${kf4}A"},
